[gd_scene load_steps=9 format=3 uid="uid://p1io2m7nt5i5"]

[ext_resource type="Script" path="res://src/ui/main_ui/dialog_box/dialog_box.gd" id="1_48lrq"]
[ext_resource type="FontFile" uid="uid://dl68xvod3xq1g" path="res://assets/fonts/Robtronika-Regular.ttf" id="2_i3et5"]
[ext_resource type="Texture2D" uid="uid://80yao4blh6lp" path="res://src/ui/main_ui/dialog_box/sprites/frame/frame.png" id="2_typa5"]
[ext_resource type="Texture2D" uid="uid://bmja4fjaaa0ki" path="res://src/characters/npcs/portraits/portrait_1.png" id="4_7hxia"]
[ext_resource type="FontFile" uid="uid://cc7vg3vkvt3w7" path="res://assets/fonts/Robtronika-Italic.ttf" id="4_qy10j"]
[ext_resource type="Texture2D" uid="uid://bo1wr4catq86a" path="res://src/ui/main_ui/dialog_box/sprites/frame/sub_heading_frame.png" id="5_oawoj"]
[ext_resource type="Texture2D" uid="uid://cvmi2pbt6noc2" path="res://src/ui/main_ui/dialog_box/sprites/decoration/frame_dec_1.png" id="7_6r7hs"]
[ext_resource type="Texture2D" uid="uid://c1roxbenis0y7" path="res://src/ui/main_ui/dialog_box/sprites/icons/complete.png" id="7_8bwcj"]

[node name="Dialog" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_48lrq")

[node name="TextBox" type="NinePatchRect" parent="."]
texture_filter = 1
custom_minimum_size = Vector2(496, 240)
layout_mode = 2
offset_left = 346.0
offset_top = 164.0
offset_right = 842.0
offset_bottom = 404.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_typa5")
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="TextBox"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 11.0
offset_top = 13.0
offset_right = -12.0
offset_bottom = -14.0
grow_horizontal = 2
grow_vertical = 2

[node name="HeadContainer" type="MarginContainer" parent="TextBox/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 75

[node name="VBoxContainer" type="VBoxContainer" parent="TextBox/VBoxContainer/HeadContainer"]
layout_mode = 2
alignment = 1

[node name="TitleContainer" type="HBoxContainer" parent="TextBox/VBoxContainer/HeadContainer/VBoxContainer"]
layout_mode = 2

[node name="Icon" type="TextureRect" parent="TextBox/VBoxContainer/HeadContainer/VBoxContainer/TitleContainer"]
layout_mode = 2
texture = ExtResource("7_8bwcj")

[node name="TitleContainer" type="MarginContainer" parent="TextBox/VBoxContainer/HeadContainer/VBoxContainer/TitleContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_top = 4

[node name="TitleText" type="RichTextLabel" parent="TextBox/VBoxContainer/HeadContainer/VBoxContainer/TitleContainer/TitleContainer"]
clip_contents = false
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("2_i3et5")
theme_override_fonts/italics_font = ExtResource("4_qy10j")
theme_override_font_sizes/normal_font_size = 18
theme_override_font_sizes/italics_font_size = 24
bbcode_enabled = true
text = "Delivery [color=green]Complete[/color]"
scroll_active = false

[node name="SubTitleContainer" type="MarginContainer" parent="TextBox/VBoxContainer/HeadContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 88)
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_right = 128
theme_override_constants/margin_bottom = 38

[node name="SubTitlePanel" type="NinePatchRect" parent="TextBox/VBoxContainer/HeadContainer/VBoxContainer/SubTitleContainer"]
layout_mode = 2
texture = ExtResource("5_oawoj")
patch_margin_left = 12
patch_margin_right = 32

[node name="SubTitleTextContainer" type="MarginContainer" parent="TextBox/VBoxContainer/HeadContainer/VBoxContainer/SubTitleContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
theme_override_constants/margin_left = 17
theme_override_constants/margin_top = 6

[node name="SubTitleText" type="RichTextLabel" parent="TextBox/VBoxContainer/HeadContainer/VBoxContainer/SubTitleContainer/SubTitleTextContainer"]
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("2_i3et5")
theme_override_fonts/italics_font = ExtResource("4_qy10j")
theme_override_font_sizes/normal_font_size = 16
theme_override_font_sizes/italics_font_size = 16
bbcode_enabled = true
text = "[i][color=green]86%[/color] quality
[color=yellow]$327[/color] reward[/i]"
scroll_active = false

[node name="Body" type="MarginContainer" parent="TextBox/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_top = -24

[node name="VBoxContainer" type="VBoxContainer" parent="TextBox/VBoxContainer/Body"]
layout_mode = 2
size_flags_vertical = 3

[node name="SeparatorContainer" type="MarginContainer" parent="TextBox/VBoxContainer/Body/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_bottom = 8

[node name="HBoxContainer" type="HBoxContainer" parent="TextBox/VBoxContainer/Body/VBoxContainer/SeparatorContainer"]
layout_mode = 2

[node name="Separator1" type="TextureRect" parent="TextBox/VBoxContainer/Body/VBoxContainer/SeparatorContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("7_6r7hs")

[node name="Separator2" type="TextureRect" parent="TextBox/VBoxContainer/Body/VBoxContainer/SeparatorContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("7_6r7hs")

[node name="BodyContainer" type="MarginContainer" parent="TextBox/VBoxContainer/Body/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = -4
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="BodyText" type="RichTextLabel" parent="TextBox/VBoxContainer/Body/VBoxContainer/BodyContainer"]
clip_contents = false
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("2_i3et5")
theme_override_fonts/italics_font = ExtResource("4_qy10j")
theme_override_font_sizes/normal_font_size = 16
theme_override_font_sizes/italics_font_size = 16
bbcode_enabled = true
text = "Did you know the liver is the next biggest organ after the skin?"
scroll_active = false

[node name="Portrait" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 2
offset_left = 290.0
offset_top = 136.0
offset_right = 419.0
offset_bottom = 264.0
size_flags_horizontal = 3
texture = ExtResource("4_7hxia")
